full-moon/tests/roblox_cases/fail/parser/missing_else_in_if_expression/source.lua
local endIndex = if a_condition
		then expression_if_true
		else if another_condition
				then another_expression_if_true

print("testing")